fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   width: 30rem;
   height: 40rem;
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 header {
